<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>transmitter</groupId>
  <artifactId>serial-terminal</artifactId>
  <version>1.0-SNAPSHOT</version>

  <name>Laser Data Serial terminal</name>
  <!-- FIXME change it to the project's website -->
  <url>http://www.example.com</url>

  <packaging>jar</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <maven.compiler.release>11</maven.compiler.release>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>11.0.2</version>
    </dependency>

    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>11.0.2</version>
    </dependency>

    <dependency>
      <groupId>com.fazecast</groupId>
      <artifactId>jSerialComm</artifactId>
      <version>2.9.1</version>
    </dependency>

    <dependency>
      <groupId>com.jfoenix</groupId>
      <artifactId>jfoenix</artifactId>
      <version>9.0.10</version>
    </dependency>

    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-javafx</artifactId>
      <version>12.3.1</version>
    </dependency>

    <dependency>
      <groupId>org.kordamp.ikonli</groupId>
      <artifactId>ikonli-materialdesign2-pack</artifactId>
      <version>12.3.1</version>
    </dependency>

    <dependency>
      <groupId>io.socket</groupId>
      <artifactId>socket.io-client</artifactId>
      <version>2.0.1</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <!-- put your configurations here -->
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.8</version>
        <configuration>
          <mainClass>transmitter.Main</mainClass>
          <!-- required workaround for jfoenix -->
          <options>
            <option> --add-opens </option>
            <option> java.base/java.lang.reflect=com.jfoenix </option>

            <option> --add-opens </option>
            <option> javafx.graphics/javafx.css=ALL-UNNAMED </option>
            <option> --add-opens </option>
            <option> javafx.base/com.sun.javafx.runtime=ALL-UNNAMED </option>
            <option> --add-opens </option>
            <option> javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED </option>
            <option> --add-opens </option>
            <option> javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED </option>
            <option> --add-opens </option>
            <option> javafx.base/com.sun.javafx.binding=ALL-UNNAMED </option>
            <option> --add-opens </option>
            <option> javafx.base/com.sun.javafx.event=ALL-UNNAMED </option>
            <option> --add-opens </option>
            <option> javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED </option>

            <option> --add-exports </option>
            <option> javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix </option>
            <option> --add-exports </option>
            <option> javafx.controls/com.sun.javafx.scene.control=com.jfoenix </option>
            <option> --add-exports </option>
            <option> javafx.base/com.sun.javafx.binding=com.jfoenix </option>
            <option> --add-exports </option>
            <option> javafx.graphics/com.sun.javafx.stage=com.jfoenix </option>
            <option> --add-exports </option>
            <option> javafx.graphics/com.sun.javafx.scene=com.jfoenix </option>
            <option> --add-exports </option>
            <option> javafx.base/com.sun.javafx.event=com.jfoenix </option>
          </options>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.4</version>
        <configuration>
          <!-- put your configurations here -->
          <configuration>
            <transformers>
              <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
            </transformers>
          </configuration>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>